# 50-sounds-chart

./: .gitignore  README.md  index.html  package-lock.json  package.json  release.keystore  vite.config.ts
.github/workflows/: release.yml
scripts/: gen-audio.py
src/: App.module.css  App.tsx  audio.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Chart.module.css  Chart.tsx  Extras.module.css  FeedbackBar.tsx  Menu.module.css  MistakeBook.tsx  Mistakes.module.css  OptionGroup.tsx  PracticeMenu.tsx  PromptCard.tsx  Quiz.module.css  QuizScreen.tsx  SessionSummary.tsx  Settings.module.css  SettingsView.tsx
src/data/: decks.ts  examples.test.ts  examples.ts  kana.ts  romaji.test.ts  romaji.ts  sets.ts
src/engine/: bag.ts  engine.test.ts  exclude.test.ts  integration.test.ts  question.ts  random.ts
src/hooks/: useQuiz.ts  useSpeech.ts
src/store/: progress.ts  settings.ts
